[package]
name = "portenta-h7-async"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }

cortex-m-rt = "0.7"

embassy-stm32 = { path = "D:/rust/embassy/embassy-stm32", features = [
  "defmt",
  "stm32h747xi-cm7",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "exti",
  "embedded-sdmmc",
  "chrono",
] }

embassy-sync = { path = "D:/rust/embassy/embassy-sync", features = [
  "defmt",
] }

embassy-executor = { path = "D:/rust/embassy/embassy-executor", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }

embassy-time = { path = "D:/rust/embassy/embassy-time", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }

embassy-usb = { path = "D:/rust/embassy/embassy-usb", features = [
  "defmt",
] }

embassy-net = { path = "D:/rust/embassy/embassy-net", features = [
  "defmt",
  "tcp",
  "dhcpv4",
  "medium-ethernet",
  "proto-ipv6",
  "dns",
] }

defmt = "=0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.6"
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "2.0.0", features = ["nightly"] }
chrono = { version = "^0.4", default-features = false }
rand_core = "0.6.3"


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
